# meow-vm-legacy

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/common/: definitions.h  op_codes.h  pch.h  value.h
include/loader/: binary_parser.h  bytecode_parser.h
include/memory/: garbage_collector.h  mark_sweep_gc.h  memory_manager.h  meow_object.h
include/runtime/: operator_dispatcher.h
include/vm/: meow_engine.h  meow_vm.h
src/: main.cpp
src/loader/: binary_parser.cpp  bytecode_parser.cpp
src/memory/: mark_sweep_gc.cpp  memory_manager.cpp
src/meow-vm/: define_natives.cpp  handle_call.cpp  handle_method.cpp  helper_functions.cpp  load_module.cpp  meow_vm.cpp
src/meow-vm/op-functions/: control_flow.cpp  data_struct.cpp  exception.cpp  expression.cpp  load_store.cpp  module.cpp  oop.cpp  others.cpp
src/runtime/: operator_dispatcher.cpp
stdlib/common/: meow_script.h
stdlib/src/: array.cpp  io.cpp  json.cpp  object.cpp  string.cpp  system.cpp
